--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -41,3 +41,14 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./data
         publish_branch: gh-pages
+    - name: Commit files
+      run: |
+        git config --local user.email secrets.EMAIL
+        git config --local user.name "Scraping Bot"
+        git status | grep modified && git add data.json && git commit -v -m "[Bot] GitHub Actions - auto run. Update at $(date +'%Y-%m-%d')" \
+          && curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+            -H "Accept: application/vnd.github.everest-preview+json" \
+            -H "Content-Type: application/json" \
+            https://api.github.com/repos/codeforkumamoto/covid19/dispatches --data '{"event_type": "build_application"}' \
+          || true
